# zngur

./: .gitignore  Cargo.toml
book/src/: how_it_works.md  philosophy.md  tutorial.md
book/src/call_rust_from_cpp/: name_mapping.md
examples/cxx_demo/: blobstore.cpp  build.rs
examples/memory_management/: generated.cpp  main.cpp
examples/osmium/: build.rs
examples/tutorial_cpp/: build.rs  impls.cpp  main.zng
zgen/: Cargo.toml
zgen/src/: lib.rs
zngur/: Cargo.toml
zngur-cli/src/: main.rs
zngur-def/: Cargo.toml
zngur-def/src/: lib.rs
zngur-generator/: Cargo.toml
zngur-generator/src/: cpp.rs  lib.rs  rust.rs
zngur-parser/: Cargo.toml
zngur-parser/src/: lib.rs
zngur/src/: cppjinjawriter.rs  cppwriter.rs  instantiate.rs  lib.rs  parser.rs  types.rs
