[package]
name = "zngur"
description = "A Rust/C++ interoperability tool"
readme = "../README.md"
version = "0.4.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hotreload = ["zngur-generator/hotreload"]
std-namespace-fix = ["zngur-generator/std-namespace-fix"]

[dependencies]
zngur-generator = { version = "=0.4.0", path = "../zngur-generator" }
