[package]
name = "zngur"
description = "A Rust/C++ interoperability tool"
readme = "../README.md"
version = "0.4.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hotreload = ["zngur-generator/hotreload"]
mut-guard = ["zngur-generator/mut-guard"]
std-namespace-fix = ["zngur-generator/std-namespace-fix"]
edition-2024 = ["zngur-generator/edition-2024"]

[dependencies]
zngur-generator = { version = "=0.4.0", path = "../zngur-generator" }
syn = { version = "2.0.98", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.84"
quote = "1.0.38"
prettyplease = "0.2.29"
heck = "0.5.0"
tera = "1.20.0"
